--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,6 +22,8 @@
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
     "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true, // Adicionado para suporte a módulos CommonJS
+    "strictNullChecks": true, // Adicionado para validação de valores nulos
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true
   },
